Flag image background overlap fixed

--- a/src/styles/components/FlagImage.module.scss
+++ b/src/styles/components/FlagImage.module.scss
@@ -39,12 +39,18 @@
     .flagImage {
         width: 100%;
         height: 100%;
-        border-radius: 50%;
-        background-color: white;
+        border-radius: inherit;
         background-size: cover;
         background-position: center;
         object-fit: cover;
         position: absolute;
+    }
+
+    .background {
+        width: calc(100% - 4px);
+        height: calc(100% - 4px);
+        border-radius: inherit;
+        background-color: white;
     }
 
     // .uploadButton {
